--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "express": "^4.17.2",
     "hbs": "^4.2.0",
-    "mongoose": "^6.2.0",
-    "nodemon": "^2.0.15"
+    "mongoose": "^6.2.1",
+    "nodemon": "^2.0.15",
+    "validator": "^13.7.0"
   }
 }
